[Using TestContainers for Integration Tests] - Exploring some options with test containers - Configured some preload on docker.