@@ -21,9 +21,28 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <jvmArguments>
-                        -XX:+IgnoreUnrecognizedVMOptions --add-modules java.xml.bind -Dfile.encoding=UTF-8
+                        -XX:+IgnoreUnrecognizedVMOptions -Dfile.encoding=UTF-8
                     </jvmArguments>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.20</version>
+                <configuration>
+                    <includes>
+                        <include>**/*IT.java</include>
+                    </includes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
@@ -61,7 +80,7 @@
         <assertj.version>3.8.0</assertj.version>
         <restassured.version>3.0.3</restassured.version>
         <springboot.version>1.4.196</springboot.version>
-        <h2.version>1.4.196</h2.version>
+        <testcontainers.version>1.4.2</testcontainers.version>
     </properties>
 
     <dependencies>
@@ -167,9 +186,16 @@
         </dependency>
 
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>${h2.version}</version>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
